# UBB--Computer-Science

./: README.md
1st year/Semester 1/ASC/HW 1/: HW 1 - 1.asm  HW 1 - 2.asm  HW 1 - 2.lst  HW 1 - 3.asm  HW 1 - 3.lst  HW 1 - 4.asm  HW 1 - 4.lst  HW 1 - 5.asm  HW 1 - 5.lst  HW 1.asm
1st year/Semester 1/ASC/HW 2/: HW 2 - 1.asm  HW 2 - 1.lst  HW 2 - 2.asm  HW 2 - 2.lst  HW 2 - 3.asm  HW 2 - 3.lst  HW 2 - 4.asm  HW 2 - 4.lst
1st year/Semester 1/ASC/HW lab 4/: HW lab 4, ex 3 - 1.asm  HW lab 4, ex 3 - 1.lst
1st year/Semester 1/ASC/HW lab 5/: HW lab 5 - pb 3.asm  HW lab 5 - pb 3.lst
1st year/Semester 1/ASC/HW lab 8/: HW lab 8 text file_done.asm  HW lab 8 text file_done.lst  input.txt.txt
1st year/Semester 1/ASC/LAB 8/: input_file.txt.txt  lab 8 pb 3 text files.asm  lab 8 pb 3 text_files.asm  lab 8 pb 3 text_files.lst  pb 3 lab 8 function calls.asm  pb 3 lab 8 function calls.lst
1st year/Semester 1/Fundamental of Programming/A1/: p1.py  p2.py  p3.py
1st year/Semester 1/Fundamental of Programming/A3/: A3.py
1st year/Semester 1/Fundamental of Programming/A4/: A4 - pb 7 DP again.py  A4 - pb 7 DP.py  A4 - pb12 iterative.py  A4 - pb12.py  A4.py  iterative.py
1st year/Semester 1/Fundamental of Programming/EXAM-related/: grades.txt
1st year/Semester 1/Fundamental of Programming/For_RETAKE/: classes with magic methods.py  divide_et_impera_recursiv.py  main.py
1st year/Semester 1/Fundamental of Programming/Preparing_for_2nd_lab_test/: start_of_program.py  student.txt
1st year/Semester 1/Fundamental of Programming/The Game of Life/: board.py  cell_patterns.txt  game.py  start_of_game.py  state.txt  states  ui.py
1st year/Semester 1/Fundamental of Programming/a9-DenisaToarcas/: Tests.py  board.py  computer_player.py  game.py  sparse_matrix.py  ui.py
1st year/Semester 2/Data Structures and Algorithms/FixedCapBiMap_project/: FixedCapBiMap.cpp  FixedCapBiMap.h  FixedCapBiMapIterator.cpp  FixedCapBiMapIterator.h  FixedCapBiMap_project.sln  FixedCapBiMap_project.vcxproj
1st year/Semester 2/Data Structures and Algorithms/IteratedListOKK/: CMakeLists.txt
1st year/Semester 2/Data Structures and Algorithms/IteratedListOKK/src/: App.cpp  ExtendedTest.cpp  IteratedList.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp
1st year/Semester 2/Data Structures and Algorithms/MultiMap/: MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
1st year/Semester 2/Data Structures and Algorithms/MultiMap (1)/: CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h
1st year/Semester 2/Data Structures and Algorithms/PriorityQueue/: CMakeLists.txt
1st year/Semester 2/Data Structures and Algorithms/PriorityQueue/PriorityQueue/: App.cpp  ExtendedTest.cpp  PriorityQueue.cpp  PriorityQueue.h  ShortTest.cpp  ShortTest.h
1st year/Semester 2/Data Structures and Algorithms/Priority_Queue_dll/: Priority_Queue_dll.sln  Priority_Queue_dll.vcxproj  (+1 more)
1st year/Semester 2/Graphs/: DAG_work4.docx  Documentation 1.docx  Test Floyd Warshall.txt  minimum cost Floyd Warshall.docx  read_work4.docx
1st year/Semester 2/Object-oriented Programming/A 8-9/: AdministratorModeGUI.cpp  AdministratorModeGUI.h  AdministratorWindow.ui  AdministratorWindow_dialog.ui  CMakeLists.txt  CSVfile.csv  GUI.cpp  GUI.h  Tutorials.ui  UserModeGUI.cpp  UserModeGUI.h  UserWindow_dialog.ui  main.cpp  test.txt  ui_AdministratorWindow.h  ui_AdministratorWindow_dialog.h  ui_Tutorials.h  ui_UserWindow_dialog.h
1st year/Semester 2/Object-oriented Programming/A 8-9/Repository/: HTMLhandler.cpp  HTMLhandler.h  Repository.cpp  Repository.h  RepositoryExceptions.cpp  RepositoryExceptions.h  TestsRepo.cpp  UserExceptions.cpp  UserExceptions.h  userRepo.cpp  userRepo.h
1st year/Semester 2/Object-oriented Programming/A 8-9/Service/: Service.cpp  Service.h  ServiceExceptions.cpp  Validator.cpp  Validator.h
1st year/Semester 2/Object-oriented Programming/A2/: CMakeLists.txt
1st year/Semester 2/Object-oriented Programming/A2/a23-DenisaToarcas/: Tests.c  Tests.h  UndoRedo_Repo.c  UndoRedo_Repo.h  domain.c  domain.h  main.c  repository.c  repository.h  service.c  service.h  ui.c  ui.h
1st year/Semester 2/Object-oriented Programming/A6/: CMakeLists.txt  Repository.cpp  Repository.h  Service.cpp  Service.h  TestService.cpp  TestService.h  TestTutorial.cpp  TestTutorial.h  TestUSER.cpp  TestUSER.h  TestsRepo.cpp  TestsRepo.h  Tutorial.cpp  Tutorial.h  UI.h  start_of_program.cpp  userRepo.cpp  userRepo.h
1st year/Semester 2/Object-oriented Programming/A7/: CMakeLists.txt  HTMLfile.html  start_of_program.cpp
1st year/Semester 2/Object-oriented Programming/A7/Duration/: Duration.cpp  Duration.h
1st year/Semester 2/Object-oriented Programming/A7/Repository/: CSVhandler.cpp  CSVhandler.h  Repository.cpp  Repository.h  TestsRepo.h  userRepo.cpp  userRepo.h
1st year/Semester 2/Object-oriented Programming/A7/Service/: Service.cpp  Service.h  ServiceExceptions.h
1st year/Semester 2/Object-oriented Programming/A7/Tutorial/: Tutorial.cpp  Tutorial.h
1st year/Semester 2/Object-oriented Programming/A7/UI/: UI.cpp  UI.h
2nd year/Semester 3/Databases/: AdiSorecauPractic.sql  Beti.sql  Examen.sql  Lab3.sql  Lab5.sql  OSUBB_CJ.sql  Procedures_lab3.sql  Querries_lab2.sql  lab3_.sql
3rd year/Formal Languages and Compiler Design/Lab 2/: HashTable.java  Pair.java  README.md  SymbolTable.java
3rd year/Research Project/Lab 3_4/: Lab 3_4 - Exploring the Influence of Social Media on Destination Choices.docx
3rd year/Research Project/Lab 5_8/: Lab 5_8 - Social Media Influences.docx  README.md  main.py  validation.py
3rd year/mobile application programming/Project Ideea/: projectIdeea.md
EXAM-related/: main.py  start_of_program.py  students.txt
EXAM-related/controller/: grade_controller.py  student_controller.py
EXAM-related/domain/: grade_validator.py  student_validator.py  validation_exceptions.py
EXAM-related/repo/: RepoExceptions.py  grade_repo.py  student_repo.py
EXAM-related/ui/: console.py
(+442 files in other folders)
